export const snapshot = {};

snapshot[`parse "x" 1`] = `
{
  identifier: "x",
  type: "var",
}
`;

snapshot[`parse "(x -> y)" 1`] = `
{
  body: {
    identifier: "y",
    type: "var",
  },
  bound: "x",
  type: "abstraction",
}
`;

snapshot[`parse "(x -> (y -> z))" 1`] = `
{
  body: {
    body: {
      identifier: "z",
      type: "var",
    },
    bound: "y",
    type: "abstraction",
  },
  bound: "x",
  type: "abstraction",
}
`;

snapshot[`parse "(x y)" 1`] = `
{
  left: {
    identifier: "x",
    type: "var",
  },
  right: {
    identifier: "y",
    type: "var",
  },
  type: "application",
}
`;

snapshot[`parse "((x y) z)" 1`] = `
{
  left: {
    left: {
      identifier: "x",
      type: "var",
    },
    right: {
      identifier: "y",
      type: "var",
    },
    type: "application",
  },
  right: {
    identifier: "z",
    type: "var",
  },
  type: "application",
}
`;

snapshot[`parse "(x (y z))" 1`] = `
{
  left: {
    identifier: "x",
    type: "var",
  },
  right: {
    left: {
      identifier: "y",
      type: "var",
    },
    right: {
      identifier: "z",
      type: "var",
    },
    type: "application",
  },
  type: "application",
}
`;

snapshot[`parse "(((x y) (a b)) (c -> d))" 1`] = `
{
  left: {
    left: {
      left: {
        identifier: "x",
        type: "var",
      },
      right: {
        identifier: "y",
        type: "var",
      },
      type: "application",
    },
    right: {
      left: {
        identifier: "a",
        type: "var",
      },
      right: {
        identifier: "b",
        type: "var",
      },
      type: "application",
    },
    type: "application",
  },
  right: {
    body: {
      identifier: "d",
      type: "var",
    },
    bound: "c",
    type: "abstraction",
  },
  type: "application",
}
`;

snapshot[`parse "((x -> (y -> x)) (y z))" 1`] = `
{
  left: {
    body: {
      body: {
        identifier: "x",
        type: "var",
      },
      bound: "y",
      type: "abstraction",
    },
    bound: "x",
    type: "abstraction",
  },
  right: {
    left: {
      identifier: "y",
      type: "var",
    },
    right: {
      identifier: "z",
      type: "var",
    },
    type: "application",
  },
  type: "application",
}
`;

snapshot[`parse "((x -> (y -> x)) y)" 1`] = `
{
  left: {
    body: {
      body: {
        identifier: "x",
        type: "var",
      },
      bound: "y",
      type: "abstraction",
    },
    bound: "x",
    type: "abstraction",
  },
  right: {
    identifier: "y",
    type: "var",
  },
  type: "application",
}
`;

snapshot[`parse "(x ((y -> x) (a -> b)))" 1`] = `
{
  left: {
    identifier: "x",
    type: "var",
  },
  right: {
    left: {
      body: {
        identifier: "x",
        type: "var",
      },
      bound: "y",
      type: "abstraction",
    },
    right: {
      body: {
        identifier: "b",
        type: "var",
      },
      bound: "a",
      type: "abstraction",
    },
    type: "application",
  },
  type: "application",
}
`;

snapshot[`parse "((((x -> (y -> (z -> ((x z) (y z))))) a) (x -> (y -> x))) c)" 1`] = `
{
  left: {
    left: {
      left: {
        body: {
          body: {
            body: {
              left: {
                left: {
                  identifier: "x",
                  type: "var",
                },
                right: {
                  identifier: "z",
                  type: "var",
                },
                type: "application",
              },
              right: {
                left: {
                  identifier: "y",
                  type: "var",
                },
                right: {
                  identifier: "z",
                  type: "var",
                },
                type: "application",
              },
              type: "application",
            },
            bound: "z",
            type: "abstraction",
          },
          bound: "y",
          type: "abstraction",
        },
        bound: "x",
        type: "abstraction",
      },
      right: {
        identifier: "a",
        type: "var",
      },
      type: "application",
    },
    right: {
      body: {
        body: {
          identifier: "x",
          type: "var",
        },
        bound: "y",
        type: "abstraction",
      },
      bound: "x",
      type: "abstraction",
    },
    type: "application",
  },
  right: {
    identifier: "c",
    type: "var",
  },
  type: "application",
}
`;
